--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ projects/dog-project/saved_models/weights.best.from_scratch.hdf5
 projects/dog-project/saved_models/weights.best.vgg16.hdf5
 projects/dog-project/bottleneck_features/DogVGG16Data.npz
 projects/dog-project/__MACOS*
+
+*.swp
